# light-wait

./: .gitignore  MANIFEST.in  Pipfile  README.md  lightwait.py  pyproject.toml  setup.py  tox.ini
example/: convert.md  lightwait.ini  opensource.md
lightwait/: __init__.py  __main__.py  cli.py  exception.py  lightwait.ini  lightwait.py
lightwait/template/: base.index  main.index  post.index  tag.index
lightwait/www/css/: main.css
markdown/: README.md
templates/: base.index  main.index  post.index  tag.index
tests/: test_lightwait.py
tests/resources/: allmetadata.md  nometadata.md  partialmetadata.md
tests/resources/home/.lightwait/: lightwait.ini
