[tool.poetry]
name = "lightwait"
version = "0.0.4"
description = "Light-wait produces the bare minimum blog content from markdown files"
authors = ["dlange"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "*"
Markdown = "^3.3.7"
feedgen = "^0.9.0"
pathvalidate = "^2.5.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
lightwait = 'lightwait.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
